@@ -387,8 +387,6 @@ void AgencyCache::run() {
                 TRI_ASSERT(rs.get("log").isArray());
                 LOG_TOPIC("4579e", TRACE, Logger::CLUSTER) <<
                   "Applying to cache " << rs.get("log").toJson();
-                pc.clear();
-                cc.clear();
                 for (auto const& i : VPackArrayIterator(rs.get("log"))) {
                   pc.clear();
                   cc.clear();
@@ -397,7 +395,7 @@ void AgencyCache::run() {
                     _readDB.applyTransaction(i); // apply logs
                     _commitIndex = i.get("index").getNumber<uint64_t>();
 
-                    {
+                   {
                       std::lock_guard g(_callbacksLock);
                       handleCallbacksNoLock(i.get("query"), uniq, toCall, pc, cc);
                     }
@@ -559,24 +557,35 @@ void AgencyCache::beginShutdown() {
   }
 
   // trigger all callbacks
-  {
-    std::lock_guard g(_callbacksLock);
-    for (auto const& i : _callbacks) {
-      auto cb = _callbackRegistry.getCallback(i.second);
-      if (cb != nullptr) {
-        LOG_TOPIC("76bb8", DEBUG, Logger::CLUSTER)
-          << "Agency callback " << i << " has been triggered. refetching!";
-        try {
-          cb->refetchAndUpdate(true, false);
-        } catch (arangodb::basics::Exception const& e) {
-          LOG_TOPIC("c3111", WARN, Logger::AGENCYCOMM)
-            << "Error executing callback: " << e.message();
-        }
+  while (true) {
+    // this is a bit complicated... we pop one callback from the list of
+    // available calls while holding the _callbacksLock, but we release the
+    // lock afterwards, so that we can call into the _callbackRegistry without
+    // holding the _callbacksLock
+    uint64_t callbackId;
+    {
+      std::lock_guard g(_callbacksLock);
+      if (_callbacks.empty()) {
+        _callbacksCount = 0;
+        break;
       }
-    }
-    if (!_callbacks.empty()) {
-      _callbacks.clear();
-      _callbacksCount = 0;
+      auto it = _callbacks.begin();
+      TRI_ASSERT(it != _callbacks.end());
+      callbackId = it->second;
+      _callbacks.erase(it);
+      _callbacksCount -= 1;
+    } // release _callbacksLock
+
+    auto cb = _callbackRegistry.getCallback(callbackId);
+    if (cb != nullptr) {
+      LOG_TOPIC("76bb8", DEBUG, Logger::CLUSTER)
+        << "Agency callback " << callbackId << " has been triggered. refetching!";
+      try {
+        cb->refetchAndUpdate(true, false);
+      } catch (arangodb::basics::Exception const& e) {
+        LOG_TOPIC("c3111", WARN, Logger::AGENCYCOMM)
+          << "Error executing callback: " << e.message();
+      }
     }
   }
 
